Initial setup of In App Purchase.

--- a/WorkoutTimer/Base.lproj/LaunchScreen.storyboard
+++ b/WorkoutTimer/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -15,13 +14,12 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                    <view key="view" contentMode="scaleAspectFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="WorkoutTimer-OpeningBackground" translatesAutoresizingMaskIntoConstraints="NO" id="CA7-wu-Wrh">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WorkoutTimer-OpeningBackground" translatesAutoresizingMaskIntoConstraints="NO" id="CA7-wu-Wrh">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WorkoutTimerIcon-OpeningPNG" translatesAutoresizingMaskIntoConstraints="NO" id="Hrg-qa-ThX">
                                 <rect key="frame" x="37.5" y="183.5" width="300" height="300"/>
@@ -34,15 +32,19 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="CA7-wu-Wrh" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="5H4-Op-2OG"/>
                             <constraint firstItem="Hrg-qa-ThX" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="5kL-K6-tlX"/>
+                            <constraint firstItem="CA7-wu-Wrh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Gvh-xn-YQ6"/>
                             <constraint firstItem="Hrg-qa-ThX" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="UC8-KO-eTZ"/>
+                            <constraint firstItem="CA7-wu-Wrh" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="kAz-HQ-aE6"/>
+                            <constraint firstItem="CA7-wu-Wrh" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="oV5-xr-i1Z"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="50.399999999999999" y="373.76311844077964"/>
         </scene>
     </scenes>
     <resources>
